syntax = "proto3";

package example.maps;

option go_package = "github.com/f2hard3/proto-go-lang/proto";

message IdWrapper {
    uint32 id = 1;
}

message MapExample {
    map<string, IdWrapper> ids = 1;
}